--- a/app/package.json
+++ b/app/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "iris-starter-kit",
+  "name": "proci",
   "version": "0.1.0",
   "description": "",
   "scripts": {
     "eslint": "eslint *.js client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "olebedev",
+  "author": "nvxtien",
   "license": "MIT",
   "dependencies": {
     "autoprefixer": "^6.7.7",
@@ -99,5 +99,5 @@
     ]
   },
   "main": "index.js",
-  "repository": "git@github.com:kataras/iris-starter-kit.git"
+  "repository": "git@github.com:nvxtien/proci.git"
 }
