--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,52 +1,6 @@
-# Gopkg.toml example
-#
-# Refer to https://golang.github.io/dep/docs/Gopkg.toml.html
-# for detailed Gopkg.toml documentation.
-#
-# required = ["github.com/user/thing/cmd/thing"]
-# ignored = ["github.com/user/project/pkgX", "bitbucket.org/user/project/pkgA/pkgY"]
-#
-# [[constraint]]
-#   name = "github.com/user/project"
-#   version = "1.0.0"
-#
-# [[constraint]]
-#   name = "github.com/user/project2"
-#   branch = "dev"
-#   source = "github.com/myfork/project2"
-#
-# [[override]]
-#   name = "github.com/x/y"
-#   version = "2.4.0"
-#
-# [prune]
-#   non-go = false
-#   go-tests = true
-#   unused-packages = true
-
-
-#[[constraint]]
-#  branch = "master"
-#  name = "github.com/btcsuitereleases/btcutil"
-
-#[[constraint]]
-#  name = "github.com/fsouza/go-dockerclient"
-#  version = "1.3.0"
+ignored = ["github.com/proci/chaincode"]
 
 [[constraint]]
-#  version = "1.0.0-alpha4"
-#  branch = "master"
+  # Release v1.0.0-alpha4
   name = "github.com/hyperledger/fabric-sdk-go"
   revision = "a906355f73d060d7bf95874a9e90dc17589edbb3"
-
-#[[constraint]]
-#  name = "github.com/kataras/iris"
-#  version = "10.7.0"
-
-#[[constraint]]
-#  branch = "v2"
-#  name = "gopkg.in/mgo.v2"
-
-[prune]
-  go-tests = true
-  unused-packages = true
