--- a/config.yaml
+++ b/config.yaml
@@ -107,7 +107,7 @@ channels:
 
     # Required. list of peers from participating orgs
     peers:
-      peer0.org1.hf.nvxtien.io:
+      peer0.org1.nvxtien.io:
         # [Optional]. will this peer be sent transaction proposals for endorsement? The peer must
         # have the chaincode installed. The app can also use this property to decide which peers
         # to send the chaincode install request. Default: true
@@ -127,7 +127,7 @@ channels:
         # Default: true
         eventSource: true
 
-      peer1.org1.hf.nvxtien.io:
+      peer1.org1.nvxtien.io:
 
     policies:
       #[Optional] options for retrieving channel configuration blocks
@@ -154,10 +154,10 @@ channels:
 organizations:
   org1:
     mspid: PeerOrg1
-    cryptoPath: peerOrganizations/org1.hf.nvxtien.io/users/{userName}@org1.hf.nvxtien.io/msp
+    cryptoPath: peerOrganizations/org1.nvxtien.io/users/{userName}@org1.nvxtien.io/msp
     peers:
-      - peer0.org1.hf.nvxtien.io
-      - peer1.org1.hf.nvxtien.io
+      - peer0.org1.nvxtien.io
+      - peer1.org1.nvxtien.io
 
     # [Optional]. Certificate Authorities issue certificates for identification purposes in a Fabric based
     # network. Typically certificates provisioning is done in a separate process outside of the
@@ -165,7 +165,7 @@ organizations:
     # dynamic certificate management (enroll, revoke, re-enroll). The following section is only for
     # Fabric-CA servers.
     certificateAuthorities:
-      - ca0.org1.hf.nvxtien.io
+      - ca0.org1.nvxtien.io
 
 #
 # List of orderers to send transaction and channel create/update requests to. For the time
@@ -173,13 +173,13 @@ organizations:
 # SDK is implementation specific. Consult each SDK's documentation for its handling of orderers.
 #
 orderers:
-  orderer0.hf.nvxtien.io:
+  orderer0.nvxtien.io:
     url: localhost:7050
 
     # these are standard properties defined by the gRPC library
     # they will be passed in as-is to gRPC client constructor
     grpcOptions:
-      ssl-target-name-override: orderer0.hf.nvxtien.io
+      ssl-target-name-override: orderer0.nvxtien.io
       # These parameters should be set in coordination with the keepalive policy on the server,
       # as incompatible settings can result in closing of connection.
       # When duration of the 'keep-alive-time' is set to 0 or less the keep alive client parameters are disabled
@@ -192,20 +192,20 @@ orderers:
 
     tlsCACerts:
       # Certificate location absolute path
-      path: ${GOPATH}/src/github.com/proci/fixtures/crypto-config/ordererOrganizations/hf.nvxtien.io/tlsca/tlsca.hf.nvxtien.io-cert.pem
+      path: ${GOPATH}/src/github.com/proci/fixtures/crypto-config/ordererOrganizations/nvxtien.io/tlsca/tlsca.nvxtien.io-cert.pem
 #
 # List of peers to send various requests to, including endorsement, query
 # and event listener registration.
 #
 peers:
-  peer0.org1.hf.nvxtien.io:
+  peer0.org1.nvxtien.io:
     # this URL is used to send endorsement and query requests
     url: localhost:8051
     # eventUrl is only needed when using eventhub (default is delivery service)
     eventUrl: localhost:7053
 
     grpcOptions:
-      ssl-target-name-override: peer0.org1.hf.nvxtien.io
+      ssl-target-name-override: peer0.org1.nvxtien.io
       # These parameters should be set in coordination with the keepalive policy on the server,
       # as incompatible settings can result in closing of connection.
       # When duration of the 'keep-alive-time' is set to 0 or less the keep alive client parameters are disabled
@@ -218,16 +218,16 @@ peers:
 
     tlsCACerts:
       # Certificate location absolute path
-      path: ${GOPATH}/src/github.com/proci/fixtures/crypto-config/peerOrganizations/org1.hf.nvxtien.io/tlsca/tlsca.org1.hf.nvxtien.io-cert.pem
+      path: ${GOPATH}/src/github.com/proci/fixtures/crypto-config/peerOrganizations/org1.nvxtien.io/tlsca/tlsca.org1.nvxtien.io-cert.pem
 
-  peer1.org1.hf.nvxtien.io:
+  peer1.org1.nvxtien.io:
     # this URL is used to send endorsement and query requests
     url: localhost:8052
     # eventUrl is only needed when using eventhub (default is delivery service)
     eventUrl: localhost:8053
 
     grpcOptions:
-      ssl-target-name-override: peer1.org1.hf.nvxtien.io
+      ssl-target-name-override: peer1.org1.nvxtien.io
       # These parameters should be set in coordination with the keepalive policy on the server,
       # as incompatible settings can result in closing of connection.
       # When duration of the 'keep-alive-time' is set to 0 or less the keep alive client parameters are disabled
@@ -240,7 +240,7 @@ peers:
 
     tlsCACerts:
       # Certificate location absolute path
-      path: ${GOPATH}/src/github.com/proci/fixtures/crypto-config/peerOrganizations/org1.hf.nvxtien.io/tlsca/tlsca.org1.hf.nvxtien.io-cert.pem
+      path: ${GOPATH}/src/github.com/proci/fixtures/crypto-config/peerOrganizations/org1.nvxtien.io/tlsca/tlsca.org1.nvxtien.io-cert.pem
 
 #
 # Fabric-CA is a special kind of Certificate Authority provided by Hyperledger Fabric which allows
@@ -248,7 +248,7 @@ peers:
 # Certificate Authority instead of Fabric-CA, in which case this section would not be specified.
 #
 certificateAuthorities:
-  ca0.org1.hf.nvxtien.io:
+  ca0.org1.nvxtien.io:
     url: http://localhost:7054
     # Fabric-CA supports dynamic user enrollment via REST APIs. A "root" user, a.k.a registrar, is
     # needed to enroll and invoke new users.
@@ -258,32 +258,32 @@ certificateAuthorities:
       enrollId: admin
       enrollSecret: adminpw
     # [Optional] The optional name of the CA.
-    caName: ca0.org1.hf.nvxtien.io
+    caName: ca0.org1.nvxtien.io
     tlsCACerts:
       # Certificate location absolute path
-      path: ${GOPATH}/src/github.com/proci/fixtures/crypto-config/peerOrganizations/org1.hf.nvxtien.io/ca/ca.org1.hf.nvxtien.io-cert.pem
+      path: ${GOPATH}/src/github.com/proci/fixtures/crypto-config/peerOrganizations/org1.nvxtien.io/ca/ca.org1.nvxtien.io-cert.pem
 
 entityMatchers:
   peer:
-    - pattern: (\w*)peer0.org1.hf.nvxtien.io(\w*)
+    - pattern: (\w*)peer0.org1.nvxtien.io(\w*)
       urlSubstitutionExp: localhost:8051
       eventUrlSubstitutionExp: localhost:6051
-      sslTargetOverrideUrlSubstitutionExp: peer0.org1.hf.nvxtien.io
-      mappedHost: peer0.org1.hf.nvxtien.io
+      sslTargetOverrideUrlSubstitutionExp: peer0.org1.nvxtien.io
+      mappedHost: peer0.org1.nvxtien.io
 
-    - pattern: (\w*)peer1.org1.hf.nvxtien.io(\w*)
+    - pattern: (\w*)peer1.org1.nvxtien.io(\w*)
       urlSubstitutionExp: localhost:8052
       eventUrlSubstitutionExp: localhost:6052
-      sslTargetOverrideUrlSubstitutionExp: peer1.org1.hf.nvxtien.io
-      mappedHost: peer1.org1.hf.nvxtien.io
+      sslTargetOverrideUrlSubstitutionExp: peer1.org1.nvxtien.io
+      mappedHost: peer1.org1.nvxtien.io
 
   orderer:
-    - pattern: (\w*)orderer0.hf.nvxtien.io(\w*)
+    - pattern: (\w*)orderer0.nvxtien.io(\w*)
       urlSubstitutionExp: localhost:7050
-      sslTargetOverrideUrlSubstitutionExp: orderer0.hf.nvxtien.io
-      mappedHost: orderer0.hf.nvxtien.io
+      sslTargetOverrideUrlSubstitutionExp: orderer0.nvxtien.io
+      mappedHost: orderer0.nvxtien.io
 
   certificateAuthorities:
-    - pattern: (\w*)ca0.org1.hf.nvxtien.io(\w*)
+    - pattern: (\w*)ca0.org1.nvxtien.io(\w*)
       urlSubstitutionExp: http://localhost:7054
-      mappedHost: ca0.org1.hf.nvxtien.io
+      mappedHost: ca0.org1.nvxtien.io
